# medicapital-lead-generator

./: .buildpacks  .gitignore  Makefile  README.md  codebuff.json  frontend-backend-integration-plan.md  knowledge.md  plan.md  pyproject.toml  requirements.in  requirements.txt  search.todo
backend/: Aptfile  LINKEDIN_ENHANCEMENT_SUMMARY.md  Procfile  analyze_missing_company_data.py  enrich_existing_companies.py  migrate_db.py  migrate_to_mongodb.py  pyproject.toml  requirements.in  requirements.txt  test_single_flow.py  update_schema.py
backend/app/: api_server.py  main.py
backend/app/api/: main.py  models.py
backend/app/core/: clients.py  settings.py
backend/prompts/: company_enrichment.txt  icp.txt  icp_healthcare_end_user.txt  icp_structuring.txt  icp_sustainability_end_user.txt  icp_sustainability_supplier.txt  lead_triage.txt  query_generation.txt  refinement_prompt.txt  structured_healthcare_end_user.json  structured_icp.json  structured_manual_test.json  structured_sustainability_end_user.json  structured_sustainability_supplier.json  structured_test_healthcare_equipment.json  structured_test_healthcare_single.json
backend/scripts/: README_contact_enrichment.md  analyze_missing_company_data.py  apply_sub_industry_classification.py  audit_entity_types.py  cleanup_contacts.py  enrich_contacts.py  enrich_existing_companies.py  fix_entity_type_mapping.py  migrate_entity_types.py
backend/tests/: conftest.py  test_api_clients.py  test_employee_count_search_performance.py  test_integration_full_flow.py  test_normalizer.py  test_sub_industry_classification.py
(+83 files in other folders)
