[project]
name = "medicapital_lead_engine"
version = "0.1.0"
description = "AI-Powered Lead Generation Engine for MediCapital Solutions"
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.12.3"
dependencies = [
    "uv",
    "grpcio==1.60.0",
    "langchain>=0.2.5",
    "langgraph>=0.1.1",
    "langchain-google-genai>=1.0.6",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "typer[all]>=0.12.3",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "langsmith",
    "pymongo>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }

[tool.pytest.ini_options]
pythonpath = [
  "backend"
]
filterwarnings = [
    "ignore::DeprecationWarning:fake_http_header.*",
    "ignore::DeprecationWarning:importlib.resources.*",
    "ignore:Support for class-based.*:DeprecationWarning:pydantic.*",
]

[tool.dotenv.ini_options]
dotenv_files = ".env"
